# morfo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/morfo/: algorithm.hpp  annotation.hpp  bucket.hpp  mixin.hpp  morfo.hpp  projection.hpp  type_traits.hpp  vector.hpp
include/morfo/misc/: algorithm.hpp  static_map.hpp  static_vector.hpp  unordered_map.hpp  unordered_set.hpp
tests/: CMakeLists.txt  doctest_comptime.hpp  doctest_fuzzing.hpp  doctest_pp.hpp
tests/src/: annotations.cpp  mixin.cpp  sort.cpp  vector_interface.cpp
